Bug fix caused by using java.net.URI which was not parsing the hostname properly when the hostname contained "-" dashes, or "_" underlines.  Switched to using java.net.URL which properly parses the hostname.  Also, increased the maximum size of a PEM encoded certificate allowed in the UI, from 2048 to 4096 bytes.